<resources>
    <string name="app_name">Nots</string>
    <string name="fragment_home_toolbar">Notes</string>
    <string name="fragment_home_fab_description">Add new note</string>
    <string name="fragment_home_empty_notes_illustration_heading">Whoops!</string>
    <string name="fragment_home_empty_notes_illustration_text">You don\'t have any note, yet.\nTap the FAB to create one</string>
    <string name="fragment_home_empty_notes_illustration_description">Empty notes illustration</string>
    <string name="fragment_add_view_note_empty_hint" />
    <string name="fragment_add_view_note_title_hint">Title</string>
    <string name="fragment_add_view_note_body_hint">Body</string>
    <string name="fragment_settings_header">Settings</string>
    <string name="toolbar_title_new_note">New Note</string>
    <string name="toolbar_title_view">View</string>
    <string name="toolbar_title_edit">Edit</string>
    <string name="fragment_theme_settings_theme_header">Theme</string>
    <string name="fragment_theme_settings_current_theme">Current Theme</string>
    <string name="fragment_available_theme_available_theme">Available Theme</string>
    <string name="fragment_preview_apply_theme_button">Apply Theme</string>
    <string name="fragment_preview_apply_layout_button">Apply Layout</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="dialog_delete_icon_description">Trash bin icon</string>
    <string name="dialog_delete_note_header">Delete Note</string>
    <string name="dialog_delete_all_notes_header">Delete All Note</string>
    <string name="dialog_reorder_notes_header">Reorder Note</string>
    <string name="dialog_delete_note_text">Are you sure want to delete this note?\nThis action cannot be undone.</string>
    <string name="dialog_delete_all_notes_text">Are you sure want to delete all notes?\nThis action cannot be undone.</string>
    <string name="dialog_reorder_notes_text">This action will reorder all notes according to chronological order.\nAre you sure?</string>
    <string name="dialog_unsaved_confirmation_icon_description">Pencil icon</string>
    <string name="dialog_unsaved_confirmation_header">Unsaved Note</string>
    <string name="dialog_unsaved_confirmation_text">Any unsaved note will be deleted.\nAre your sure?</string>
    <string name="layout_item_note_swipe_description">Swipe background</string>
    <string name="layout_item_note_bookmark_icon_description">Bookmark</string>
    <string name="layout_item_note_delete_icon_description">Delete</string>
    <string name="settings_setting_icon">Setting Icon</string>
    <string name="layout_theme_tile_primary_color">Primary color</string>
    <string name="layout_theme_tile_secondary_color">Secondary color</string>
    <string name="layout_theme_tile_surface_color">Surface color</string>
    <string name="fragment_preview_theme_preview_text">Preview</string>
    <string name="fragment_preview_theme_note_title">Preview %1$s</string>
    <string name="fragment_settings_language">Language</string>
    <string name="fragment_settings_show_time_text">Show Time</string>
    <string name="fragment_settings_show_last_edited_text">Show Last Edited</string>
    <string name="fragment_settings_theme">Theme</string>
    <string name="fragment_settings_home_layout">Home Layout</string>
    <string name="fragment_settings_note_layout">Note Layout</string>
    <string name="theme_royal_lavender">Royal Lavender</string>
    <string name="theme_heather_berry">Heather Berry</string>
    <string name="theme_steel_blue">Steel Blue</string>
    <string name="menu_home_fragment_settings">Settings</string>
    <string name="menu_home_fragment_delete_all_notes">Delete All Notes</string>
    <string name="menu_home_fragment_reorder_notes">Reorder Notes</string>
    <string name="menu_add_view_fragment_undo">Undo</string>
    <string name="menu_add_view_fragment_redo">Redo</string>
    <string name="menu_add_view_fragment_undo_all">Undo All Changes</string>
    <string name="menu_add_view_fragment_confirm">Confirm</string>
    <string name="menu_add_view_fragment_delete">Delete</string>
    <string name="circle">Circle</string>
    <string name="material_you_text">Material You</string>
    <string name="fragment_layout_settings_filled">Filled</string>
    <string name="fragment_layout_settings_outlined">Outlined</string>
    <string name="fragment_layout_settings_active">Active</string>
    <string name="fragment__settings_home_layout_filled_background_description">Filled background</string>
    <string name="fragment__settings_home_layout_outlined_background_description">Outlined background</string>
    <string name="fragment__settings_home_layout_outlined_decoration_description">Outlined decoration</string>
    <string name="fragment__settings_home_layout_filled_decoration_description">Filled decoration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_fragment_filter">Filter Button</string>
    <string name="menu_filter_fragment_add_tags">Add Tags</string>
    <string name="menu_filter_fragment_delete">Delete Button</string>
    <string name="menu_filter_fragment_edit">Edit Button</string>
    <string name="menu_add_view_fragment_bookmark">Bookmark</string>
    <string name="menu_add_view_assign_tags">Assign Tags</string>
</resources>