<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    tools:context=".settings.theme.view.ThemeSettingsFragment">

    <FrameLayout
        android:id="@+id/app_bar_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar_binding"
            layout="@layout/appbar_title" />
    </FrameLayout>

    <TextView
        android:id="@+id/home_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:padding="22dp"
        android:text="@string/fragment_settings_home_layout"
        android:textAppearance="?attr/textAppearanceDisplayMedium"
        android:textColor="?attr/colorOnSurface" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/filled_layout_tile"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_margin="22dp"
            android:background="@drawable/bg_home_layout_item"
            android:contentDescription="@string/fragment__settings_home_layout_filled_background_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/filled_intersect"
            android:layout_width="166dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:background="@drawable/bg_intersect_filled_layout"
            android:contentDescription="@string/fragment__settings_home_layout_filled_decoration_description"
            android:translationZ="50dp"
            app:layout_constraintBottom_toBottomOf="@id/filled_layout_tile"
            app:layout_constraintEnd_toEndOf="@id/filled_layout_tile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/filled_layout_tile"
            app:layout_constraintStart_toStartOf="@id/filled_layout_tile">

            <TextView
                android:id="@+id/filled_layout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/fragment_layout_settings_filled"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                app:layout_constraintBottom_toTopOf="@id/filled_layout_active"
                app:layout_constraintStart_toStartOf="@id/filled_layout_tile" />

            <TextView
                android:id="@+id/filled_layout_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/fragment_layout_settings_active"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/filled_layout_tile"
                app:layout_constraintStart_toStartOf="@id/filled_layout_tile"
                tools:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/outlined_layout_tile"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_margin="22dp"
            android:background="@drawable/bg_home_layout_item"
            android:contentDescription="@string/fragment__settings_home_layout_outlined_background_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filled_layout_tile" />

        <ImageView
            android:id="@+id/outlined_intersect"
            android:layout_width="166dp"
            android:layout_height="120dp"
            android:layout_margin="2dp"
            android:background="@drawable/bg_intersect_outlined_layout"
            android:contentDescription="@string/fragment__settings_home_layout_outlined_decoration_description"
            android:translationZ="50dp"
            app:layout_constraintBottom_toBottomOf="@id/outlined_layout_tile"
            app:layout_constraintEnd_toEndOf="@id/outlined_layout_tile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/outlined_layout_tile"
            app:layout_constraintStart_toStartOf="@id/outlined_layout_tile">

            <TextView
                android:id="@+id/outlined_layout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/fragment_layout_settings_outlined"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                app:layout_constraintBottom_toTopOf="@id/outlined_layout_active"
                app:layout_constraintStart_toStartOf="@id/outlined_layout_tile" />

            <TextView
                android:id="@+id/outlined_layout_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/fragment_layout_settings_active"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/outlined_layout_tile"
                app:layout_constraintStart_toStartOf="@id/filled_layout_tile" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>